fix: dark mode background bug

--- a/xinference/web/ui/src/scenes/register_model/styles/registerModelStyle.css
+++ b/xinference/web/ui/src/scenes/register_model/styles/registerModelStyle.css
@@ -145,7 +145,7 @@
 }
 
 .test_res_box {
-  background-color: #eee;
+  border: 1px solid #ddd;
   min-height: 55px;
   padding: 10px;
   margin-top: 5px;
